* ADDED: Passing processing instructions to the user.

* FIXED: Independent case-sensitivity switch for entities (SGML entities are
  case sensitive).

* ADDED: SGML Blank-space handling

* FIXED: Completeness test for A&B?

* ADDED: Dummy make check (Richard O'Keefe)

* ADDED: Programmable XML namespace canonisation.

* ADDED: White space handling using the xlm:space attribute as well as
  allow for setting the initial default as option to load_structure.

* FIXED: Allow for <!ENTITY name 'value'> (i.e. without CDATA type decl).

* FIXED: Allow for <!DOCTYPE name [DTD]> (i.e. no public nor system)

* FIXED: Avoid crash on bad attribute-list

* ADDED: Reporting errors and warnings through print_message/2.

* FIXED: Handling of end-of-file in CDATA 